fix: api documentation
